--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "celebrate": "^13.0.2",
     "chance": "^1.1.7",
+    "class-transformer": "^0.3.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.3.3",
