--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "test:all": "jest --testMatch **/*.*spec.ts --runInBand"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/chance": "^1.1.0",
     "@types/express": "^4.17.8",
     "@types/hapi__joi": "^17.1.4",
@@ -37,6 +38,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.2",
     "chance": "^1.1.7",
     "class-transformer": "^0.3.1",
