--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -17,7 +17,8 @@
       ],
       "@shared/*": [
         "shared/*"
-      ]
+      ],
+      "@app":["app/index.ts"]
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
