--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@types/chance": "^1.1.0",
     "@types/express": "^4.17.8",
     "@types/hapi__joi": "^17.1.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.6.4",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
@@ -44,6 +45,7 @@
     "class-transformer": "^0.3.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
