--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
     "celebrate": "^13.0.2",
     "chance": "^1.1.7",
     "class-transformer": "^0.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
