--- a/api/package.json
+++ b/api/package.json
@@ -36,7 +36,8 @@
     "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
     "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "uuidv4": "^6.2.4"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -50,8 +51,7 @@
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
-    "typeorm": "^0.2.25",
-    "uuid": "^8.3.0"
+    "typeorm": "^0.2.25"
   },
   "jest": {
     "globals": {
