--- a/api/tsconfig.build.json
+++ b/api/tsconfig.build.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src/**/*.ts"],
-  "exclude": ["__tests__"]
+  "exclude": ["__tests__"],
+  "compilerOptions": {
+    "rootDir": "./src",
+  }
 }
