--- a/api/tsconfig.build.json
+++ b/api/tsconfig.build.json
@@ -1,7 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src/**/*.ts"],
-  "exclude": ["__tests__"],
+  "exclude": [
+    "__tests__",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.e2e-spec.ts"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
   }
