--- a/api/package.json
+++ b/api/package.json
@@ -37,7 +37,8 @@
     "ts-jest": "^26.3.0",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2",
-    "uuidv4": "^6.2.4"
+    "uuid": "^8.3.1",
+    "v4": "^0.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
